--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,14 +18,27 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'
+          distribution: 'adopt' # or 'zulu'
           java-version: '11'
+
+      - name: Set up ChromeDriver
+        uses: actions/setup-chromedriver@v2
+
+      - name: Install dependencies
+        run: sudo apt-get install -y xvfb
 
       - name: Build with Maven
         run: mvn clean install -Dmaven.test.skip=true
 
       - name: Run tests with Maven
-        run: mvn test
+        env:
+          DISPLAY: :99
+        run: |
+          Xvfb :99 -screen 0 1920x1080x24 &
+          mvn test
+
+      - name: Move allure-results to target directory
+        run: mvn antrun:run@move-allure-results
 
       - name: Generate Allure Report
         run: mvn allure:report
