added windows headless support

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,11 +21,17 @@ jobs:
           distribution: 'adopt' # or 'zulu'
           java-version: '11'
 
-      - name: Set up ChromeDriver
-        uses: actions/setup-chromedriver@v2
-
       - name: Install dependencies
-        run: sudo apt-get install -y xvfb
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xvfb libnss3 libgconf-2-4
+
+      - name: Set up Chrome
+        run: |
+          sudo apt-get install -y wget unzip
+          wget -q -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`wget -q -O - http://chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip
+          sudo unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
+          sudo apt-get install -y google-chrome-stable
 
       - name: Build with Maven
         run: mvn clean install -Dmaven.test.skip=true
